[project]
name = "can2mqtt"
version = "0.0.1"
authors = [
    {name="Mariusz Kryński", email="mrk@sed.pl"}
]
requires-python = ">=3.8"

dependencies = [
    "canopen@git+https://github.com/mrk-its/canopen-asyncio#egg=main",
    "esp_can@git+https://github.com/mrk-its/esphome-canbus-proxy",
    "aiomqtt<2",
    "pyserial",
    "coloredlogs",
    "pyinotify==0.9.6",
    "awesomeversion==24.6.0",
]

[project.scripts]  # Optional
can2mqtt = "main:main"

[project.entry-points."can.interface"]
mqtt_can = "mqtt_can:MqttCan"

[project.optional-dependencies]
dev = [
    "black"
]

[tool.setuptools.package-data]
can2mqtt = ["eds/*.eds"]
