[project]
name = "can2mqtt"
version = "0.2.3"
authors = [
    {name="Mariusz Kryński", email="mrk@sed.pl"}
]
requires-python = ">=3.8"

dependencies = [
    "canopen@git+https://github.com/mrk-its/canopen-asyncio#egg=feature-asyncio",
    "esp_usb_serial[esptool]@git+https://github.com/mrk-its/esphome-canbus-usb-serial",
    "aiomqtt<2",
    "pyserial",
    "coloredlogs",
    "pyinotify==0.9.6",
    "awesomeversion==24.6.0",
    "pyasyncore",
]

[project.scripts]  # Optional
can2mqtt = "main:main"

[project.optional-dependencies]
dev = [
    "black"
]

[tool.setuptools.package-data]
can2mqtt = ["eds/*.eds"]
